--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" class="icon-pg" type="image/svg+xml" href="src/assets/devto-light.svg" />
+  <link rel="icon" class="icon-pg" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio de Obed Aquino - Desarrollador Full Sack</title>
+  <title>Portafolio de Obed Aquino - Desarrollador Backend</title>
   <meta name="description"
-    content="Portafolio de Obed Aquino, desarrollador Full Stack Jr. JavaScript, Node.js y proyectos web modernos." />
+    content="Portafolio de Obed Aquino, desarrollador Backend Jr. JavaScript, Node.js y proyectos web modernos." />
+  <meta property="og:title" content="Obed Aquino — Desarrollador Backend Jr" />
+  <meta property="og:description"
+    content="Portafolio de Obed Aquino, desarrollador Backend Jr. JavaScript, Node.js y proyectos web modernos." />
+  <meta property="og:image" content="/favicon.svg" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
