Correccion en el titulo del index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" class="icon-pg" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio de Obed Aquino - Desarrollador Backend</title>
+  <title>Portafolio de Obed Aquino - Desarrollador Full Stack</title>
   <meta name="description"
     content="Portafolio de Obed Aquino, desarrollador Backend Jr. JavaScript, Node.js y proyectos web modernos." />
   <meta property="og:title" content="Obed Aquino — Desarrollador Backend Jr" />
